--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
                 <h2>Employee</h2>
                 <ul class="nav flex-column">
                   <li class="nav-item">
-                    
+                    <h4 routerLink="home"> <i class="bi bi-house-door-fill"></i> Home </h4>
                   </li>
                   <li class="nav-item">
                     
@@ -29,7 +29,7 @@
               </div>
         </div>
         <div class="asideRight">
-    
+            <router-outlet></router-outlet>
         </div>
     </div>
 </div>
