--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,7 +17,7 @@
                     <h4 routerLink="home"> <i class="bi bi-house-door-fill"></i> Home </h4>
                   </li>
                   <li class="nav-item">
-                    
+                    <h4 routerLink="employees"><i class="bi bi-person-workspace"></i> Employees </h4>
                   </li>
                   <li class="nav-item">
                  
