--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -1,5 +1,7 @@
 <div id="main">
+    
     <form [formGroup]="employeeForm">
+        <h2>Create Employee</h2>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Name</label>
           <input  formControlName="name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
@@ -70,11 +72,11 @@
               </div>
              
          <hr>
-         <label for="">Type:</label>
-         <input type="radio" name="workMode" formControlName="workMode" value="workfromhome" class="radio ">
-         <label for="">workfromhome</label>
-         <input  type="radio" name="workMode" formControlName="workMode" value="Workfromoffice" class="radio ">
-         <label for="">residential</label><br>
+         <label for="">Type:</label>&nbsp;
+         <input type="radio" name="workMode" formControlName="workMode" value="workfromhome" class="radio ">&nbsp;
+         <label for="">workfromhome</label>&nbsp;
+         <input  type="radio" name="workMode" formControlName="workMode" value="Workfromoffice" class="radio ">&nbsp;
+         <label for="">Workfromoffice</label><br>&nbsp;
         
           <div class="mb-3" *ngIf="employeeForm.get('workMode')?.value === 'workfromhome'">
             <label for="wifibill" class="form-label">WiFi Bill</label>
@@ -85,6 +87,8 @@
             <label for="travelbill" class="form-label">Travel Bill</label>
             <input formControlName="travelbill" type="number" class="form-control" id="travelbill">
           </div>
+
+          <hr>
     
     
         
