--- a/src/app/employees/employees.component.html
+++ b/src/app/employees/employees.component.html
@@ -146,7 +146,7 @@
       
     </th>
     <td mat-cell *matCellDef="let employee"> <button 
-        routerLink="/employee/{{employee.id}}"
+        routerLink="/dashboard/employee/{{employee.id}}"
          class="btn btn-info">veiw</button> </td>
   </ng-container>   
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
