changes made to filter and pagination

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
                 </ul>
               </div>
         </div>
-        <div class="asideRight">
+        <div class="asideRight">1
             <router-outlet></router-outlet>
         </div>
     </div>
